fix: Trading Sidebar - Wrong width for small screens

--- a/src/styles/theme/_utils.scss
+++ b/src/styles/theme/_utils.scss
@@ -140,6 +140,14 @@
   color: var(--color-text-secondary);
 }
 
-.f-fill {
-  flex: 1 0 auto;
+.flex-fill {
+  flex: 1 1 auto;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
 }
